--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -334,3 +334,631 @@ title = {Comparison of frequency-warped representations for source separation of
 volume = {2},
 journal = {Audio Engineering Society - 121st Convention Papers}
 }
+
+@article{musicsepgood,
+author = {Cano, Estefanía and Fitzgerald, Derry and Liutkus, Antoine and Plumbley, Mark and Stöter, Fabian-Robert},
+year = {2018},
+month = {01},
+pages = {},
+title = {Musical Source Separation: An Introduction},
+volume = {36},
+journal = {IEEE Signal Processing Magazine},
+doi = {10.1109/MSP.2018.2874719}
+}
+
+@article{fitzgerald1,
+author = {Fitzgerald, Derry},
+year = {2010},
+month = {01},
+title = {Harmonic/Percussive Separation using Median Filtering},
+journal = {13th International Conference on Digital Audio Effects (DAFx-10)},
+url = {http://dafx10.iem.at/papers/DerryFitzGerald_DAFx10_P15.pdf}
+}
+
+@misc{driedger,
+author = {Driedger, Jonathan and Müller, Meinard and Disch, Sascha},
+year = {2014},
+month = {01},
+pages = {},
+title = {Extending Harmonic-Percussive Separation of Audio Signals},
+url = {https://www.audiolabs-erlangen.de/content/05-fau/assistant/00-driedger/01-publications/2014_DriedgerMuellerDisch_ExtensionsHPSeparation_ISMIR.pdf}
+}
+
+@article{fitzgerald2,
+author = {Fitzgerald, Derry and Gainza, Mikel},
+year = {2010},
+month = {01},
+pages = {},
+title = {Single Channel Vocal Separation using Median Filtering and Factorisation Techniques},
+volume = {4},
+journal = {ISAST Transactions on Electronic and Signal Processing}
+}
+
+@article{tfjigsaw,
+author = {Jaillet, Florent and Torrésani, Bruno},
+year = {2007},
+month = {03},
+pages = {},
+title = {Time-Frequency Jigsaw Puzzle: adaptive multiwindow and multilayered Gabor expansions},
+volume = {05},
+journal = {International Journal of Wavelets, Multiresolution and Information Processing},
+doi = {10.1142/S0219691307001768}
+}
+
+@phdthesis{bayarres,
+author = {Ignacio Irigaray Bayarres},
+title = {Transient and steady-state component separation for audio signals},
+url = {https://iie.fing.edu.uy/publicaciones/2014/Iri14/Iri14.pdf},
+issn = {1688-2806},
+year = {2014},
+school = {Universidad de la Rep{\'u}blica Facultad de Ingenier{\'i}a}
+}
+
+@inproceedings{wmdct,
+author = {Siedenburg, Kai and Doerfler, Monika},
+year = {2011},
+month = {01},
+pages = {},
+title = {Structured sparsity for audio signals},
+booktitle = {Proc. of the 14th International Conference on Digital Audio Effects (DAFx-11), Paris, France}
+}
+
+@incollection{ltfat,
+    year={2014},
+    isbn={978-3-319-12975-4},
+    booktitle={Sound, Music, and Motion},
+    series={Lecture Notes in Computer Science},
+    editor={Aramaki, Mitsuko and Derrien, Olivier and Kronland-Martinet, Richard and Ystad, S{\o}lvi},
+    title={{The Large Time-Frequency Analysis Toolbox 2.0}},
+    publisher={Springer International Publishing},
+    author={Pr\r{u}\v{s}a, Zden\v{e}k and S{\o}ndergaard, Peter L. and Holighaus, Nicki and Wiesmeyr, Christoph and Balazs, Peter},
+    pages={419-442},
+    doi={{10.1007/978-3-319-12976-1_25}},
+}
+
+@misc{musdb18,
+  author       = {Rafii, Zafar and
+                  Liutkus, Antoine and
+                  Fabian-Robert St{\"o}ter and
+                  Mimilakis, Stylianos Ioannis and
+                  Bittner, Rachel},
+  title        = {The {MUSDB18} corpus for music separation},
+  month        = dec,
+  year         = 2017,
+  doi          = {10.5281/zenodo.1117372},
+}
+
+@misc{musdb18-hq,
+  author       = {Rafii, Zafar and
+                  Liutkus, Antoine and
+                  Stöter, Fabian-Robert and
+                  Mimilakis, Stylianos Ioannis and
+                  Bittner, Rachel},
+  title        = {MUSDB18-HQ - an uncompressed version of MUSDB18},
+  month        = aug,
+  year         = 2019,
+  doi          = {10.5281/zenodo.3338373},
+}
+
+@article{bss,
+author = {Vincent, Emmanuel and Gribonval, Rémi and Févotte, Cédric},
+year = {2006},
+month = {08},
+pages = {1462 - 1469},
+title = {Performance measurement in blind audio source separation},
+volume = {14},
+journal = {Audio, Speech, and Language Processing, IEEE Transactions on},
+doi = {10.1109/TSA.2005.858005}
+}
+
+@article{peass,
+author = {Emiya, Valentin and Vincent, Emmanuel and Harlander, Niklas and Hohmann, Volker},
+year = {2011},
+month = {10},
+pages = {},
+title = {Subjective and Objective Quality Assessment of Audio Source Separation},
+volume = {19},
+journal = {IEEE Transactions on Audio, Speech, and Language Processing},
+doi = {10.1109/TASL.2011.2109381}
+}
+
+@article{pemoq,
+	author={R. {Huber} and B. {Kollmeier}},
+	journal={IEEE Transactions on Audio, Speech, and Language Processing},
+	title={PEMO-Q -- A New Method for Objective Audio Quality Assessment Using a Model of Auditory Perception},
+	year={2006},
+	volume={14},
+	number={6},
+	pages={1902-1911},
+	doi={10.1109/TASL.2006.883259}
+}
+
+@inproceedings{beassvpeass,
+author = {Ward, Dominic and Wierstorf, Hagen and Mason, Russell and Grais, Emad and Plumbley, Mark},
+year = {2018},
+month = {04},
+pages = {},
+title = {BSS Eval or Peass? Predicting the Perception of Singing-Voice Separation},
+doi = {10.1109/ICASSP.2018.8462194}
+}
+
+@article{umx,
+  doi = {10.21105/joss.01667},
+  year = {2019},
+  publisher = {The Open Journal},
+  volume = {4},
+  number = {41},
+  pages = {1667},
+  author = {Fabian-Robert Stöter and Stefan Uhlich and Antoine Liutkus and Yuki Mitsufuji},
+  title = {Open-Unmix - A Reference Implementation for Music Source Separation},
+  journal = {Journal of Open Source Software}
+}
+
+@inbook{masking,
+author = {Gerkmann, Timo and Vincent, Emmanuel},
+year = {2018},
+month = {08},
+pages = {65-85},
+title = {Spectral Masking and Filtering},
+isbn = {9781119279891},
+doi = {10.1002/9781119279860.ch5},
+url = {https://hal.inria.fr/hal-01881425/document}
+}
+
+@article{umxsota,
+author = {Stöter, Fabian-Robert and Uhlich, Stefan and Liutkus, Antoine and Mitsufuji, Yuki},
+year = {2019},
+month = {09},
+pages = {1667},
+title = {Open-Unmix - A Reference Implementation for Music Source Separation},
+volume = {4},
+journal = {Journal of Open Source Software},
+doi = {10.21105/joss.01667}
+}
+
+@inproceedings{nussl,
+    author = {Ethan Manilow and Prem Seetharaman and Bryan Pardo},
+    title = "The Northwestern University Source Separation Library",
+    publisher = "Proceedings of the 19th International Society of Music Information Retrieval 
+        Conference ({ISMIR} 2018), Paris, France, September 23-27",
+    year = {2018}
+}
+
+@misc{sigsep2018,
+      title={The 2018 Signal Separation Evaluation Campaign}, 
+      author={Fabian-Robert Stöter and Antoine Liutkus and Nobutaka Ito},
+      year={2018},
+      eprint={1804.06267},
+      archivePrefix={arXiv},
+      primaryClass={eess.AS}
+}
+
+@software{pandas,
+    author       = {The pandas development team},
+    title        = {pandas-dev/pandas: Pandas},
+    month        = {02},
+    year         = {2020},
+    publisher    = {Zenodo},
+    version      = {latest},
+    doi          = {10.5281/zenodo.3509134},
+}
+
+@software{seaborn,
+    author       = {Michael Waskom and the seaborn development team},
+    title        = {mwaskom/seaborn},
+    month        = {09},
+    year         = {2020},
+    publisher    = {Zenodo},
+    version      = {latest},
+    doi          = {10.5281/zenodo.592845},
+}
+
+@article{matplotlib,
+  Author    = {Hunter, J. D.},
+  Title     = {Matplotlib: A 2D graphics environment},
+  Journal   = {Computing in Science \& Engineering},
+  Volume    = {9},
+  Number    = {3},
+  Pages     = {90--95},
+  abstract  = {Matplotlib is a 2D graphics package used for Python for
+  application development, interactive scripting, and publication-quality
+  image generation across user interfaces and operating systems.},
+  publisher = {IEEE COMPUTER SOC},
+  doi       = {10.1109/MCSE.2007.55},
+  year      = 2007
+}
+
+@incollection{pytorch,
+title = {PyTorch: An Imperative Style, High-Performance Deep Learning Library},
+author = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and Desmaison, Alban and Kopf, Andreas and Yang, Edward and DeVito, Zachary and Raison, Martin and Tejani, Alykhan and Chilamkurthy, Sasank and Steiner, Benoit and Fang, Lu and Bai, Junjie and Chintala, Soumith},
+booktitle = {Advances in Neural Information Processing Systems 32},
+editor = {H. Wallach and H. Larochelle and A. Beygelzimer and F. d\textquotesingle Alch\'{e}-Buc and E. Fox and R. Garnett},
+pages = {8024--8035},
+year = {2019},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-performance-deep-learning-library.pdf}
+}
+
+@misc{speechmask,
+      title={A comprehensive study of speech separation: spectrogram vs waveform separation}, 
+      author={Fahimeh Bahmaninezhad and Jian Wu and Rongzhi Gu and Shi-Xiong Zhang and Yong Xu and Meng Yu and Dong Yu},
+      year={2019},
+      eprint={1905.07497},
+      archivePrefix={arXiv},
+      primaryClass={cs.SD}
+}
+
+@article{musicmask,
+author = {Liu, Ruolun and Li, Suping},
+year = {2009},
+month = {09},
+pages = {},
+title = {A review on music source separation},
+journal = {Proceedings - 2009 IEEE Youth Conference on Information, Computing and Telecommunication, YC-ICT2009},
+doi = {10.1109/YCICT.2009.5382353}
+}
+
+@article{gabor1946,
+title={Theory of Communication},
+author={Dennis Gabor},
+year={1946},
+pages={429-457},
+volume={93},
+number={3},
+journal={Journal of Institution of Electrical Engineers},
+url={http://www.granularsynthesis.com/pdf/gabor.pdf}
+}
+
+@article{dictionary,
+author = {Rubinstein, Ron and Bruckstein, Alfred and Elad, Michael},
+year = {2010},
+month = {07},
+pages = {1045 - 1057},
+title = {Dictionaries for Sparse Representation Modeling},
+volume = {98},
+journal = {Proceedings of the IEEE},
+doi = {10.1109/JPROC.2010.2040551},
+url = {https://www.cs.technion.ac.il/~ronrubin/Publications/dictdesign.pdf}
+}
+
+@article{stftindie,
+	author={J. B. {Allen} and L. R. {Rabiner}},
+	journal={Proceedings of the IEEE},
+	title={A unified approach to short-time Fourier analysis and synthesis},
+	year={1977},
+	volume={65},
+	number={11},
+	pages={1558-1564},
+	doi={10.1109/PROC.1977.10770},
+}
+
+@article{dictionary1,
+author = {Mallat, S.G. and Zhang, Zhifeng},
+title = {Matching Pursuits with Time-Frequency Dictionaries},
+year = {1993},
+publisher = {IEEE Press},
+volume = {41},
+number = {12},
+issn = {1053-587X},
+doi = {10.1109/78.258082},
+abstract = {The authors introduce an algorithm, called matching pursuit, that decomposes any signal into a linear expansion of waveforms that are selected from a redundant dictionary of functions. These waveforms are chosen in order to best match the signal structures. Matching pursuits are general procedures to compute adaptive signal representations. With a dictionary of Gabor functions a matching pursuit defines an adaptive time-frequency transform. They derive a signal energy distribution in the time-frequency plane, which does not include interference terms, unlike Wigner and Cohen class distributions. A matching pursuit isolates the signal structures that are coherent with respect to a given dictionary. An application to pattern extraction from noisy signals is described. They compare a matching pursuit decomposition with a signal expansion over an optimized wavepacket orthonormal basis, selected with the algorithm of Coifman and Wickerhauser see (IEEE Trans. Informat. Theory, vol. 38, Mar. 1992)},
+journal = {Trans. Sig. Proc.},
+month = {12},
+pages = {3397–3415},
+}
+
+@article{dictionary2,
+author = {Chen, S.S. and Donoho, D. and Saunders, Michael},
+year = {2001},
+month = {01},
+pages = {33-61},
+title = {Atomic decomposition by basis pursuit[J]},
+volume = {43},
+journal = {Siam Review}
+}
+
+@phdthesis{doerflerphd,
+author = {Doerfler, Monika},
+year = {2002},
+month = {01},
+pages = {},
+title = {Gabor analysis for a class of signals called music},
+url = {http://www.mathe.tu-freiberg.de/files/thesis/gamu_1.pdf}
+}
+
+@article{psycho1,
+author = {Oppenheim, Jacob and Magnasco, Marcelo},
+year = {2012},
+month = {08},
+pages = {},
+title = {Human Time-Frequency Acuity Beats the Fourier Uncertainty Principle},
+volume = {110},
+journal = {Physical Review Letters},
+doi = {10.1103/PhysRevLett.110.044301}
+}
+
+@article{psycho2,
+author = {Moore,B. C. J. },
+title = {Frequency difference limens for short‐duration tones},
+journal = {The Journal of the Acoustical Society of America},
+volume = {54},
+number = {3},
+pages = {610-619},
+year = {1973},
+doi = {10.1121/1.1913640},
+URL = {https://doi.org/10.1121/1.1913640},
+eprint = {https://doi.org/10.1121/1.1913640}}
+
+@book{gabordiagrams,
+author = {Kutz, J. Nathan},
+title = {Data-Driven Modeling \& Scientific Computation: Methods for Complex Systems},
+year = {2013},
+isbn = {0199660344},
+publisher = {Oxford University Press, Inc.},
+address = {USA},
+pages = {336--338},
+}
+
+@article{stftinvertible,
+author = {Heinzel, Gerhard and Rüdiger, Albrecht and Schilling, R},
+year = {2002},
+month = {01},
+pages = {},
+title = {Spectrum and spectral density estimation by the Discrete Fourier transform (DFT), including a comprehensive list of window functions and some new flat-top windows},
+volume = {12},
+journal = {Max Plank Inst}
+}
+
+@article{adaptivecqt,
+author = {Liuni, Marco and Roebel, Axel and Matusiak, Ewa and Romito, Marco and Rodet, Xavier},
+year = {2013},
+month = {05},
+pages = {},
+title = {Automatic Adaptation of the Time-Frequency Resolution for Sound Analysis and Re-Synthesis},
+volume = {21},
+journal = {IEEE Transactions on Audio Speech and Language Processing},
+doi = {10.1109/TASL.2013.2239989},
+url = {https://arpi.unipi.it/retrieve/handle/11568/159584/458549/tasl.pdf}
+}
+
+@article{rtcqt,
+author = {Holighaus, Nicki and Doerfler, Monika and Velasco, Gino Angelo and Grill, Thomas},
+year = {2012},
+month = {09},
+pages = {},
+title = {A Framework for Invertible, Real-Time Constant-Q Transforms},
+volume = {21},
+journal = {IEEE Transactions on Audio, Speech and Language Processing},
+doi = {10.1109/TASL.2012.2234114},
+url = {https://arxiv.org/pdf/1210.0084.pdf}
+}
+
+@article{mdct,
+author = {Wang, Ye and Vilermo, Miikka},
+year = {2012},
+month = {01},
+pages = {},
+title = {Modified discrete cosine transform - Its implications for audio coding and error concealment},
+volume = {51},
+journal = {Advances in Engineering Software - AES},
+url = {https://smcnus.comp.nus.edu.sg/wp-content/uploads/papers/5.Error_Robust_Audio_Streaming/2002_The_Modified_Discrete_Cosine_Transform-Its_Implications_for_Audio_Coding_and_Error_Concealment.pdf}
+}
+
+@misc{honeine2014entropy,
+      title={Entropy of Overcomplete Kernel Dictionaries}, 
+      author={Paul Honeine},
+      year={2014},
+      eprint={1411.0161},
+      archivePrefix={arXiv},
+      primaryClass={cs.IT},
+      url = {https://arxiv.org/pdf/1411.0161.pdf}
+}
+
+@misc{pastor2015mathematics,
+      title={Mathematics of Sparsity and Entropy: Axioms, Core Functions and Sparse Recovery}, 
+      author={Giancarlo Pastor and Inmaculada Mora-Jiménez and Riku Jäntti and Antonio J. Caamaño},
+      year={2015},
+      eprint={1501.05126},
+      archivePrefix={arXiv},
+      primaryClass={cs.IT}
+}
+
+@article{sparsitykowalski,
+author = {Kowalski, Matthieu and Torrésani, Bruno},
+year = {2009},
+month = {09},
+pages = {},
+title = {Sparsity and persistence: Mixed norms provide simple signal models with dependent coefficients},
+volume = {3},
+journal = {Signal Image and Video Processing},
+doi = {10.1007/s11760-008-0076-1}
+}
+
+@article{sparsitykowalski2,
+author = {Kowalski, Matthieu and Torrésani, Bruno},
+year = {2009},
+month = {04},
+pages = {},
+title = {Structured Sparsity: from Mixed Norms to Structured Shrinkage},
+volume = {53},
+journal = {SPARS09-Signal Processing with Adaptive Sparse Structured Representations}
+}
+
+@article{tibshirani,
+author = {Tibshirani, Robert},
+year = {2011},
+month = {06},
+pages = {273-282},
+title = {Regression shrinkage selection via the LASSO},
+volume = {73},
+journal = {Journal of the Royal Statistical Society Series B},
+doi = {10.2307/41262671}
+}
+
+@article{shannon1948,
+author={C. E. {Shannon}},
+journal={The Bell System Technical Journal},
+title={A mathematical theory of communication},
+year={1948},
+volume={27},
+number={3},
+pages={379-423},
+doi={10.1002/j.1538-7305.1948.tb01338.x}}
+
+
+@inproceedings{entropy,
+author = {Beadle, Ed and Schroeder, Jim and Moran, Bill and Suvorova, Sofia},
+year = {2008},
+month = {11},
+pages = {1698 - 1704},
+title = {An Overview of Renyi Entropy and Some Potential Applications},
+journal = {Conference Record - Asilomar Conference on Signals, Systems and Computers},
+doi = {10.1109/ACSSC.2008.5074715}
+}
+
+@article{renyi,
+author = {Rényi, A.},
+year = {1961},
+title = {On Measures of Entropy and Information},
+journal = {Proceedings IV Berkeley Symposium on Mathematical Statistics and Probability, Berkeley, 20-30 June 1961},
+volume = {1},
+pages = {547--561}}
+
+@inproceedings{bock1,
+author = {B{\"o}ck, Sebastian and Schedl, Markus},
+year = {2011},
+pages = {},
+title = {Enhanced Beat Tracking with Context-Aware Neural Networks},
+booktitle = {Proceedings of the 14th International Conference on Digital Audio Effects, DAFx 2011},
+}
+
+@inproceedings{bock2,
+  author       = {Sebastian B{\"o}ck and
+                  Florian Krebs and
+                  Gerhard Widmer},
+  title        = {{Accurate Tempo Estimation Based on Recurrent 
+                   Neural Networks and Resonating Comb Filters.}},
+  booktitle    = {{Proceedings of the 16th International Society for 
+                   Music Information Retrieval Conference}},
+  year         = {2015},
+  pages        = {625-631},
+  publisher    = {ISMIR},
+  address      = {Málaga, Spain},
+  venue        = {Málaga, Spain},
+  doi          = {10.5281/zenodo.1416026},
+}
+
+@inproceedings{madmom,
+   title = {{madmom: a new Python Audio and Music Signal Processing Library}},
+   author = {B{\"o}ck, Sebastian and Korzeniowski, Filip and Schl{\"u}ter, Jan and Krebs, Florian and Widmer, Gerhard},
+   booktitle = {Proceedings of the 24th ACM International Conference on Multimedia},
+   year = {2016},
+   pages = {1174--1178},
+   address = {Amsterdam, The Netherlands},
+   doi = {10.1145/2964284.2973795},
+   url = {https://github.com/CPJKU/madmom}
+}
+
+@article{ellis,
+author = {Ellis, Daniel},
+year = {2007},
+pages = {51-60},
+title = {Beat Tracking by Dynamic Programming},
+volume = {36},
+journal = {Journal of New Music Research},
+doi = {10.1080/09298210701653344},
+}
+
+@inproceedings{btrack,
+author = {Stark, Adam and Davies, Matthew and Plumbley, Mark},
+year = {2009},
+title = {Real-time beat-synchronous analysis of musical audio},
+booktitle = {Proceedings of the 12th International Conference on Digital Audio Effects (DAFx-09), Como, Italy},
+}
+
+@article{goto,
+author = {Goto, Masataka},
+year = {2002},
+pages = {},
+title = {An Audio-based Real-time Beat Tracking System for Music With or Without Drum-sounds},
+volume = {30},
+journal = {Journal of New Music Research},
+doi = {10.1076/jnmr.30.2.159.7114}
+}
+
+@article{onsets,
+author = {Bello, Juan and Daudet, Laurent and Abdallah, Samer and Duxbury, Chris and Davies, Mike and Sandler, Mark},
+year = {2005},
+pages = {1035 - 1047},
+title = {A Tutorial on Onset Detection in Music Signals},
+volume = {13},
+journal = {IEE Transactions on Speech and Audio Processing},
+doi = {10.1109/TSA.2005.851998},
+}
+
+@inproceedings{rnnonset,
+  author       = {Florian Eyben and
+                  Sebastian Böck and
+                  Björn W. Schuller and
+                  Alex Graves},
+  title        = {{Universal Onset Detection with Bidirectional Long 
+                   Short-Term Memory Neural Networks.}},
+  booktitle    = {{Proceedings of the 11th International Society for 
+                   Music Information Retrieval Conference}},
+  year         = {2010},
+  pages        = {589--594},
+  publisher    = {ISMIR},
+  address      = {Utrecht, Netherlands},
+  venue        = {Utrecht, Netherlands},
+  doi          = {10.5281/zenodo.1417131},
+}
+
+@inproceedings{bock3,
+author = {B{\"o}ck, Sebastian and Krebs, Florian and Widmer, Gerhard},
+year = {2014},
+title = {A Multi-model Approach to Beat Tracking Considering Heterogeneous Music Styles},
+booktitle = {Conference: 15th International Society for Music Information Retrieval Conference (ISMIR)}
+}
+
+@inproceedings{whiteley,
+  author       = {Nick Whiteley and
+                  Ali Taylan Cemgil and
+                  Simon J. Godsill},
+  title        = {{Bayesian Modelling of Temporal Structure in 
+                   Musical Audio.}},
+  booktitle    = {{Proceedings of the 7th International Conference on 
+                   Music Information Retrieval}},
+  year         = {2006},
+  pages        = {29--34},
+  publisher    = {ISMIR},
+  address      = {Victoria, Canada},
+  venue        = {Victoria, Canada},
+  doi          = {10.5281/zenodo.1415138},
+}
+
+@inproceedings{mcfee,
+author = {McFee, Brian and Ellis, Daniel},
+year = {2014},
+pages = {2154-2158},
+title = {Better beat tracking through robust onset aggregation},
+isbn = {978-1-4799-2893-4},
+journal = {ICASSP, IEEE International Conference on Acoustics, Speech and Signal Processing - Proceedings},
+doi = {10.1109/ICASSP.2014.6853980}
+}
+
+@misc{beatmeta,
+  title={MIREX 2012 AUDIO BEAT TRACKING EVALUATION : NEUROBEAT},
+  author={E. Krebs and S. B{\"o}ck},
+  year={2012}
+}
+
+@article{smcdataset,
+author = {Holzapfel, Andre and Davies, Matthew and Zapata, Jose and Oliveira, João and Gouyon, Fabien},
+year = {2012},
+pages = {2539-2548},
+title = {Selective Sampling for Beat Tracking Evaluation},
+volume = {20},
+journal = {Audio, Speech, and Language Processing, IEEE Transactions on},
+doi = {10.1109/TASL.2012.2205244},
+url = {http://mtg.upf.edu/system/files/publications/HolzapfelEtAl12-taslp.pdf}
+}
